--- a/git-demo1.html
+++ b/git-demo1.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8">
 		<title>GIT-DEMO</title>
 		<style type="text/css">
-			
+			*{
+				margin: 0px;
+			}
 		</style>
 	</head>
 	<body>
